Fix alignment on app links

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -166,6 +166,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
     font-size: 16px;
     text-decoration: none;
     color: black;
+    vertical-align: top;
 
     &:hover {
       color: #ab0015;
